--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -311,3 +311,7 @@ def isNewArchitectureEnabled() {
     // - Set an environment variable `ORG_GRADLE_PROJECT_newArchEnabled=true`
     return project.hasProperty("newArchEnabled") && project.newArchEnabled == "true"
 }
+
+// Firebase
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
