--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^16.4.6",
+    "@react-native-firebase/auth": "^16.4.6",
+    "@react-native-firebase/firestore": "^16.4.6",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "react": "18.1.0",
     "react-native": "0.70.6"
   },
