--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -251,6 +251,12 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    implementation 'com.google.mlkit:image-labeling:17.0.7' // Image labeling - ML Kit
+
+    // Firebase functions
+    implementation 'com.google.firebase:firebase-functions:20.2.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
