--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -252,6 +252,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     implementation 'com.google.mlkit:image-labeling:17.0.7' // Image labeling - ML Kit
+    implementation 'com.google.mlkit:face-detection:16.1.5' // Face detection - ML Kit
 
     // Firebase functions
     implementation 'com.google.firebase:firebase-functions:20.2.1'
