--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
     "@react-native-firebase/app": "^16.4.6",
     "@react-native-firebase/auth": "^16.4.6",
     "@react-native-firebase/firestore": "^16.4.6",
