--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -251,6 +251,13 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:31.1.1')
+
+    // Add the dependency for the Cloud Storage library
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-storage'
+
     implementation 'com.google.mlkit:image-labeling:17.0.7' // Image labeling - ML Kit
     implementation 'com.google.mlkit:face-detection:16.1.5' // Face detection - ML Kit
 
